fix link colors and fixed z-indexes
z-indexes were wrong. It was possible to get the table header in behind of
labels. It was also possible that search options were behind the table header.
Labels were also in front of dialogs.
This is now resolved.
fixes #46

Some links had the wrong colors. This is now resolved, via restructuring the css-class
fixes #47

--- a/app/components/input/select2/select2.component.css
+++ b/app/components/input/select2/select2.component.css
@@ -4,6 +4,10 @@
     width: 100% !important;
 }
 
+:host /deep/ div {
+    z-index: 3001;
+}
+
 :host /deep/ input {
     width: 100%;
 }
