--- a/app/components/output/generic-table/generic-table.component.css
+++ b/app/components/output/generic-table/generic-table.component.css
@@ -29,7 +29,3 @@ table tr {
 table {
     width: auto;
 }
-
-ptooltip {
-    z-index: 3000;
-}
