--- a/app/components/polymer/tooltip/tooltip.component.css
+++ b/app/components/polymer/tooltip/tooltip.component.css
@@ -13,12 +13,16 @@
     border-radius: 6px;
 
     position: absolute;
-    z-index: 1;
+    z-index: 4999;
 
     white-space: nowrap;
 
     transition-property: visibility;
     transition-duration: 0.1s;
+}
+
+:host .ptooltiptext /deep/ a {
+    color: lightgray;
 }
 
 :host .ptooltiptext /deep/ ul, :host .ptooltiptext /deep/ ol {
