--- a/app/styles/style.css
+++ b/app/styles/style.css
@@ -2,7 +2,3 @@ html {
     overflow: auto;
     overflow: initial;
 }
-
-ptooltip div div p a.cite-link {
-    color: lightgrey;
-}
